Particle Info node and Displacement Crash #53833

Closed
opened 2018-01-19 02:54:47 +01:00 by Stoician · 3 comments

System Information
OS Name: Microsoft Windows 7 Professional
Version: 6.1.7601 Service Pack 1 Build 7601
Processor: Intel(R) Core(TM) i5-3570K CPU @ 3.40GHz, 3401 Mhz, 4 Core(s), 4 Logical Processor(s)
Graphics Chipset: AMD Radeon (TM) R9 380 Series

Blender Version
Broken: 2.79 5bd8ac9
Broken: 2.79 001789d (latest on builder.blender.org)

Description
In the official release version of blender, opening the attached blend file will trigger a crash. This blend file contains a node setup utilizing the true displacement option in Cycles Experimental.
The instant crash occurs because the material tab is open and Blender attempts to refresh the preview image. If the materials tab is not open the instant crash does not occur, but CPU renders will crash.

When using the latest compile for 2.79, blender does not immediately crash when opening this file. But attempting to make any modification of the node setup or starting a full CPU render will trigger a crash.
With one exception: removing the Particle Info node. If this is done then the crash does not occur.

If this material is used on an actual particle (particle system set to use an object with the given material), the crash occurs with the first frame that a particle appears in the scene.

The problem does not seem to happen immediately. After creating the node setup, rendering will actually work, but saving and restarting Blender produces this behavior. Also removing the Particle Info node and replacing it will sometimes get it to work for a few renders (but that's quite random).

Here's the weird part. If the GPU is used, renders do not trigger a crash! (So thankfully I've been able to continue my project.)

crashtest1.blend

nodesetup.PNG

**System Information** OS Name: Microsoft Windows 7 Professional Version: 6.1.7601 Service Pack 1 Build 7601 Processor: Intel(R) Core(TM) i5-3570K CPU @ 3.40GHz, 3401 Mhz, 4 Core(s), 4 Logical Processor(s) Graphics Chipset: AMD Radeon (TM) R9 380 Series **Blender Version** Broken: 2.79 5bd8ac9 Broken: 2.79 001789d (latest on builder.blender.org) **Description** In the official release version of blender, opening the attached blend file will trigger a crash. This blend file contains a node setup utilizing the true displacement option in Cycles Experimental. The instant crash occurs because the material tab is open and Blender attempts to refresh the preview image. If the materials tab is not open the instant crash does not occur, but CPU renders will crash. When using the latest compile for 2.79, blender does not immediately crash when opening this file. But attempting to make any modification of the node setup or starting a full CPU render will trigger a crash. With one exception: removing the Particle Info node. If this is done then the crash does not occur. If this material is used on an actual particle (particle system set to use an object with the given material), the crash occurs with the first frame that a particle appears in the scene. The problem does not seem to happen immediately. After creating the node setup, rendering will actually work, but saving and restarting Blender produces this behavior. Also removing the Particle Info node and replacing it will sometimes get it to work for a few renders (but that's quite random). Here's the weird part. If the GPU is used, renders do **not** trigger a crash! (So thankfully I've been able to continue my project.) [crashtest1.blend](https://archive.blender.org/developer/F1886106/crashtest1.blend) ![nodesetup.PNG](https://archive.blender.org/developer/F1886123/nodesetup.PNG)
Author

Added subscriber: @littlebob

Added subscriber: @littlebob
Stoician changed title from Particle Info node and Displacement to Particle Info node and Displacement Crash 2018-01-19 02:55:11 +01:00

This issue was referenced by blender/cycles@7ed2fc4ef2

This issue was referenced by blender/cycles@7ed2fc4ef20343ec0f2ce1691fec95a17816b8eb
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Mai Lavelle self-assigned this 2018-01-19 04:51:05 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53833
No description provided.